--- a/Demo.DIYControl/Demo.DIYControl.csproj
+++ b/Demo.DIYControl/Demo.DIYControl.csproj
@@ -59,6 +59,8 @@
     </Compile>
     <Compile Include="Controls\DeepInDIY\ColorPicker.cs" />
     <Compile Include="Controls\DeepInDIY\FlipPannel.cs" />
+    <Compile Include="ThemeManager\Accent.cs" />
+    <Compile Include="ThemeManager\ThemeManager.cs" />
     <Compile Include="Views\ColorPickerDemoPage.xaml.cs">
       <DependentUpon>ColorPickerDemoPage.xaml</DependentUpon>
     </Compile>
@@ -81,6 +83,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Styles\Accents\Steel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Colors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="themes\ColorPicker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
