Modify project Demo.Share, and add a new project Demo.WPFGraphics.

--- a/Demo.Share/Demo.Share.csproj
+++ b/Demo.Share/Demo.Share.csproj
@@ -51,5 +51,8 @@
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="lovely.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
